<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/scrollableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dddddd" >

            <TextView
                android:id="@+id/UserAddeditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/employeeAdd"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000099"
                android:textSize="18dp"
                android:textStyle="bold" />

            <!-- For username -->

            <TableRow
                android:id="@+id/UserAddtableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:textSize="15dp" >
                </EditText>
            </TableRow>

            <!-- For Gender dropbox -->

            <TableRow
                android:id="@+id/UserAddtableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeGender"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:checked="true"
                        android:text="@string/genderMale"
                        android:textColor="#000055"
                        android:textSize="15dp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genderFemale"
                        android:textColor="#000055"
                        android:textSize="15dp" />
                </RadioGroup>
            </TableRow>

            <!-- For location -->

            <TableRow
                android:id="@+id/UserAddtableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeAddress"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:textSize="15dp" >
                </EditText>
            </TableRow>

            <!-- For Email -->

            <TableRow
                android:id="@+id/UserAddtableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeEmail"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For Homephone -->

            <TableRow
                android:id="@+id/UserAddtableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewHomePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeHomePhone"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextHomePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="phone"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For MOBILE -->

            <TableRow
                android:id="@+id/UserAddtableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeMobile"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="phone"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For UserName -->

            <TableRow
                android:id="@+id/UserAddtableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeUserName"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For Password1 -->

            <TableRow
                android:id="@+id/UserAddtableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewPassword1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeePwd"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextPassword1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For Password2 -->

            <TableRow
                android:id="@+id/UserAddtableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewPassword2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeePwdReenter"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextPassword2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textSize="15dp" />
            </TableRow>
            <!-- For Designation -->

            <TableRow
                android:id="@+id/UserAddtableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewDesignation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeDesignation"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextDesignation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:textSize="15dp" />
            </TableRow>

            <!-- For Remarks -->

            <TableRow
                android:id="@+id/UserAddtableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/UserAddtextViewRemarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/employeeRemarks"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000055"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/UserAddeditTextRemarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:ems="10"
                    android:textSize="15dp" />
            </TableRow>

            <!-- Button -->

            <ImageButton
                android:id="@+id/UserAddbuttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/submit_button"
                android:textColor="#000055" />
        </TableLayout>
    </LinearLayout>

</ScrollView>