<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayoutChangePwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewUserPwdChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/employeeAdd"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000099"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TableRow
            android:id="@+id/tableRowCurrentPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewCurrentPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/oldPwd"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000055"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/EditTextCurrentPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:textSize="15sp" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowNewPwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewChangePassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/newPwd"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000055"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextChangePassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowNewPwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewChangePassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/newPwdAgain"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000055"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextChangePassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </TableRow>

            <!-- Button -->

            <ImageButton
                android:id="@+id/buttonPwdChange"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/submit_button"
                android:textColor="#000055" />
    </TableLayout>

</LinearLayout>